# bytelizer

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yaml
bitc/: CMakeLists.txt  README.llm.md  README.md  ast.c  generator.c  utils.c
bitc/bitc/: codegen_mapping.h  codegen_types.h  compiler.h  const.h  pass.h  token.h
bitc/codegen/: plugin.c
bitc/include/: ast.h  bitc.h  codegen_plugin.h  lexer.h  utils.h
bitc/pass/: merge.c
bitc/src/: bitc.c  compiler.c  lexer.c
bitc/src/codegen/: mapping.c  types.c
bitc/src/pass/: fold.c  validate.c
bytelizer/: advanced.h  barrier.h  codec.h  common.h  error.h  protobuf.h
example/bit/: declare.bit  embed.bit  helloworld.bit
example/helloworld/: main.c
example/protobuf/: main.c
src/: CMakeLists.txt  advanced.h  anchor.h  barrier.h  bitwise.h  codec.c  codec.h  compiler.h  list.c  list.h  protobuf.c  protobuf.h
src/debug/: internal.h  log.c  log.h
